@@ -41,9 +41,6 @@
 #include "am_map.h"
 #include "lprintf.h"
 
-#define MAXWIDTH  MAX_SCREENWIDTH          /* kilough 2/8/98 */
-#define MAXHEIGHT MAX_SCREENHEIGHT
-
 //
 // All drawing to the view buffer is accomplished in this file.
 // The other refresh files only know about ccordinates,
@@ -60,39 +57,6 @@ int  viewheight;
 int  viewwindowx;
 int  viewwindowy;
 
-// leban 1/17/99:
-//
-// these next two are pre-calculated to help the speed of the inner
-// loops.  however, they're not a win on a powerpc, and probably not
-// on any other modern cpu that isn't afraid of multiplies.
-//
-// consider ylookup.  below, it's initialized in a loop as
-//    columnofs[i] = viewwindowx + i;
-// that's one addition.  indexing into an array is one addition.
-// but since columnofs is an array with global scope, loading usually
-// is another instruction.  on powerpc, the value is stored in the
-// TOC instead of the address.  i think x86 does something similar,
-// as someone added a bunch of local copies of similar variables below.
-// that tactic can move an extra load out of an inner loop.
-//
-// but wait, there's more, as an array offset must be converted into
-// array units, which in this case is most likely a shift left.  that's
-// one more instruction wasted per array index.
-//
-// there's also an extra benefit on powerpc:  the number of registers
-// used in R_DrawColumn is reduced, and a stack frame is no longer
-// needed.  there's another two instructions saved.
-//
-// i'll leave these two in for now, but they could eventually get
-// removed.  columnofs[] is actually referenced elsewhere.  topleft
-// isn't static to work around a metrowerks compiler bug.
-//
-// XXX
-//
-// CPhipps - also to use it in the i386 asm I need it global
-
-//byte *ylookup[MAXHEIGHT];
-//int  columnofs[MAXWIDTH];
 byte *topleft;
 
 // Color tables for different players,
